codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__default_unified_mention_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› @sa                                                                                               "
"                                                                                                    "
"> Sample Plugin  Plugin with skills and an MCP server                                         插件  "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  enter 插入 · esc 关闭 · ←/→ 切换搜索模式                    [全部结果]   仅文件系统    插件与技能 "
