codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__mention_popup_type_prefixes.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                        "
"› $goog                                                                 "
"                                                                        "
"                                                                        "
"  Google Calendar  [插件] Connect Google Calendar for scheduling, avail…"
"  Google Calendar  [技能] Find availability and plan event changes      "
"  Google Calendar  [应用] Look up events and availability               "
"                                                                        "
"  按 enter 插入，或按 esc 关闭                                          "
