codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__skill_popup_falls_back_from_bound_skill_with_path_suffix.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› $left  $bound/path                                                                                "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  left  [技能] Example skill used in tests.                                                         "
"                                                                                                    "
"  按 enter 插入，或按 esc 关闭                                                                      "
