codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__skill_popup_targets_unbound_mention_left_of_bound_mention.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› $unbound-skill  $bound-skill continue                                                             "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  unbound-skill  [技能] Example skill used in tests.                                                "
"                                                                                                    "
"  按 enter 插入，或按 esc 关闭                                                                      "
